Simple Command Event Check: Ok (Valgrind & GDB)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ set(SNORLAX_EVA_SOURCE      src/snorlax/event.c
                             src/snorlax/event/subscription/event/queue.c
                             src/snorlax/event/generator/set.c
                             src/snorlax/event/processor/pool.c
+                            src/snorlax/event/engine/conf.c
                             src/snorlax/command.c
                             src/snorlax/command/event.c
                             src/snorlax/command/event/subscription.c
