--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,23 +11,23 @@ include_directories(src include)
 message(${CMAKE_CURRENT_SOURCE_DIR})
 
 ExternalProject_Add(snorlax-std
-    PREFIX          "${PROJECT_SOURCE_DIR}/lib"
-    TMP_DIR         "${PROJECT_SOURCE_DIR}/lib/tmp/snorlax/std"
-    STAMP_DIR       "${PROJECT_SOURCE_DIR}/lib/stamp/snorlax/std"
-    DOWNLOAD_DIR    "${PROJECT_SOURCE_DIR}/lib/snorlax/std"
-    SOURCE_DIR      "${PROJECT_SOURCE_DIR}/lib/snorlax/std"
+    PREFIX          "${PROJECT_SOURCE_DIR}/lib/snorlax/std"
+    TMP_DIR         "${PROJECT_SOURCE_DIR}/lib/snorlax/std/tmp"
+    STAMP_DIR       "${PROJECT_SOURCE_DIR}/lib/snorlax/std/stamp"
+    DOWNLOAD_DIR    "${PROJECT_SOURCE_DIR}/lib/snorlax/std/src"
+    SOURCE_DIR      "${PROJECT_SOURCE_DIR}/lib/snorlax/std/src"
     BINARY_DIR      "${PROJECT_SOURCE_DIR}/lib/snorlax/std/build"
-    INSTALL_DIR     "${PROJECT_SOURCE_DIR}/lib"
-    LOG_DIR         "${PROJECT_SOURCE_DIR}/lib/log"
+    INSTALL_DIR     "${PROJECT_SOURCE_DIR}/lib/snorlax/std/install"
+    LOG_DIR         "${PROJECT_SOURCE_DIR}/lib/snorlax/std/log"
     GIT_REPOSITORY  git@github.com:SnorlaxBio/std.git
     GIT_TAG         main
     GIT_REMOTE_NAME origin
     CONFIGURE_COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Debug
-                                       -S "${PROJECT_SOURCE_DIR}/lib/snorlax/std"
+                                       -S "${PROJECT_SOURCE_DIR}/lib/snorlax/std/src"
                                        -B "${PROJECT_SOURCE_DIR}/lib/snorlax/std/build"
                                        --install-prefix ${PROJECT_SOURCE_DIR}
-    BUILD_COMMAND   ${CMAKE_COMMAND} --build "${PROJECT_SOURCE_DIR}/lib/snorlax/std/build"
-                                     --target all)
+    BUILD_COMMAND     ${CMAKE_COMMAND} --build "${PROJECT_SOURCE_DIR}/lib/snorlax/std/build"
+                                       --target all)
 
 link_directories(${PROJECT_SOURCE_DIR}/lib ${PROJECT_SOURCE_DIR}/build)
 
